Moved drawer toggling into a toggleDrawer function

--- a/css/map.css
+++ b/css/map.css
@@ -99,7 +99,11 @@ body {
   width: 100%;
 }
 .panel {
-  display: none;
+  max-height:0;
+  transition:max-height 0.4s;
+}
+.panel.is-open {
+  max-height:100vh;
 }
 .bar {
   border-bottom: 1px solid #26505d;
@@ -114,13 +118,6 @@ body {
   color: #fff;
   text-decoration: none;
 }
-
-
-.panel.is-open {
-  width:25%;
-  display:block;
-}
-
 
 .c-btn-group {
     margin: 0;
