--- a/css/map.css
+++ b/css/map.css
@@ -60,7 +60,7 @@ body {
     border-bottom: 2px solid #f9f9f9;
     background-color: #0f3d4c;
     height: 5rem;
-    padding: 0 .5rem;
+    padding: 0 .75rem 0 .5rem;
     width: 100%;
 }
 
