Add shortdesc to pop-ups and improve paragraph spacing

--- a/css/snazzy-info-window.css
+++ b/css/snazzy-info-window.css
@@ -139,6 +139,9 @@
 .si-content {
   overflow: auto; }
 
+.si-content p {
+  margin: 0.5em 0; }
+
 .si-close-button {
   position: absolute;
   top: 0;
