POI mobile zoom display
Added ability to look at the current media query and Google Map zoom level and toggle the POI's based on this.

- Removed unnecessary css to force poi-item display
- Made some abstractions and added in the hidePopupItemsOnMobileZoom function
- Added the zoom_changed Google Map event listener to the uoy_maps library

--- a/css/map.css
+++ b/css/map.css
@@ -625,7 +625,10 @@ input[type=search] {
     position: absolute;
     /* The max width of the info window. */
     width: 200px;
-    display: inherit !important;
+    /*display: inherit !important;*/
+}
+.o-poi-item.is-hidden {
+    visibility: hidden;
 }
 /* The bubble is anchored above the tip. */
 .o-poi-item--anchor {
