--- a/css/map.css
+++ b/css/map.css
@@ -597,8 +597,8 @@ input[type=search] {
     position: absolute;
     top: 0;
     left: 0;
-    /*transform: translate(-50%, -100%);*/
-    background-color: #00b3eb;
+    transform: translate(-50%, -50%);
+    background-color: #00697A;
     color: #fff;
     padding: 5px;
     overflow-y: auto;
