Geolocation error supression
Shut off the alert generated by the geolocation stuff as it was blocking the rest of the script from working.

Also implemented a softer, non-blocking error using our PL alert system

--- a/css/map.css
+++ b/css/map.css
@@ -609,7 +609,17 @@ input[type=search] {
 }
 
 
-
+/* ========================================================================== */
+/* Global alert overlay */
+/* ========================================================================== */
+.c-alert--overlay {
+    position: absolute;
+    top: 20px;
+    z-index: 999;
+    transform: translatex(50%);
+    width: 50%;
+    opacity: 0.9;
+}
 
 
 
