Final convert of campus map project to webpack

--- a/src/css/map.css
+++ b/src/css/map.css
@@ -1,4 +1,4 @@
-@import url(https://www.york.ac.uk/static/1.5/css/styles.min.css);
+@import url("https://www.york.ac.uk/static/1.5.6/css/styles.min.css");
 
 html,
 body {
