--- a/src/css/map.css
+++ b/src/css/map.css
@@ -184,7 +184,6 @@ body {
     display: block;
     margin: .5rem;
     padding:  .25rem  0 .25rem .35rem;
-
 }
 
 .control-campus-div--campus-buttons p {
@@ -192,7 +191,6 @@ body {
     font-weight: bold;
     margin: 0;
     padding:0;
-
 }
 
 @media (max-width: 767px){
@@ -261,10 +259,7 @@ body {
     .ipad-fix {
         display: inline-block;
     }
-
 }
-
-
 
 
 .c-btn--selectable__label {
@@ -321,11 +316,9 @@ body {
       padding: 0.5rem 0;
       width: 150px;
   }
-
   .control-ui {
     width: 8em;
   }
-
 }
 
 
@@ -419,7 +412,7 @@ input[type=search] {
   display: none;
   height: calc(100vh - 8.5rem);
   padding: 2rem 1rem;
-  width: 0%;
+  width: 0;
   position: absolute;
   left: 0;
   top: 5rem;
