--- a/src/css/map.css
+++ b/src/css/map.css
@@ -1,4 +1,3 @@
-@import url("https://www.york.ac.uk/static/1.5.6/css/styles.min.css");
 
 html,
 body {
@@ -28,7 +27,7 @@ body {
   }
 }
 
-/* Map wrapper to contain the map's div + its controls + info panel */
+/* Map wrapper to contain the map's div + overlays (controls & info panel) */
 .map-wrapper {
   flex: 1 1 auto;
   position:relative;
@@ -57,14 +56,6 @@ body {
   top: .5rem;
 }
 
-
-
-/*streetview info caption*/
-.gm-iv-address {
-    height: 56px !important;
-    min-width: 200px !important;
-}
-
 .c-map-header {
     border-bottom: 2px solid #f9f9f9;
     background-color: #0f3d4c;
@@ -72,6 +63,13 @@ body {
     padding: 0 .75rem 0 .5rem;
     width: 100%;
 }
+
+@media (max-width: 767px){
+    .c-map-header {
+        height: 4rem;
+    }
+}
+
 
 .c-map-header__title {
     color: #fdfdfd;
@@ -157,17 +155,14 @@ body {
     padding: 0;
 }
 
+/* ========================================================================== */
+/* Map controls */
+/* ========================================================================== */
 
-.gm-style-iw {
-    padding: .5em;
-    width: 200px !important;
-    height: 90px !important;
+.control-div
+{
+    padding:0.5rem 0.75rem;
 }
-
-.gm-style-iw p {
-  margin: 0;
-}
-
 
 .control-div-feedback {
     z-index: 0;
@@ -184,82 +179,63 @@ body {
 }
 
 
-
 .control-campus-div--campus-buttons {
     background-color:rgba(240,242,233,0.8);
     border-radius: 0.4em;
     display: block;
-    margin: .5rem;
-    padding:  .25rem  0 .25rem .35rem;
+    margin: 0 -0.35rem;
+    padding:0.35rem;
 }
 
 .control-campus-div--campus-buttons p {
     font-size: .7rem;
     font-weight: bold;
-    margin: 0;
-    padding:0;
+    margin:0 0 0.35rem 0;
 }
 
 @media (max-width: 767px){
     .control-campus-div--campus-buttons {
         display: none;
     }
-    .control-campus-div {
-        margin-right: .75rem;
-    }
-    .c-map-header {
-        height: 4rem;
-
-    }
 }
 
 .control-ui{
+  display:block;
+  width: 100%;
+  padding: 0.5em 0.75em;
+
   background-color:#fff;
   border-radius: 0.4em;
+  border: 1px solid #caccb8;
+
   cursor: pointer;
   font-size: 12px;
-  height: 1.75rem;
-  margin-bottom: .5em;
-  margin-top: .5em;
-  margin-right: .5em;
+  line-height: 1.3;
   text-align: center;
-  user-select: none;
-  width: 4em;
+}
+
+.control-ui:hover {
+    background-color:#f6f6f6;
+}
+
+.control-ui + * {
+    margin-top:0.35rem;
+}
+
+.control-ui--feedback {
+  background-color: #a23479;
+  color: #fdfdfd;
+  border:none;
+}
+
+.control-ui--feedback:hover {
+  background-color: #b53a87;
 }
 
 .c-icon--refresh {
     font-size: 12px;
     padding: .2rem;
 }
-
-.control-text{
-  padding: .5em;
-  user-select: none;
-  cursor: pointer;
-}
-
-.control-campus-div .control-ui {
-    border: 1px solid #caccb8;
-}
-
-.control-reset-ui {
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.control-ui--feedback {
-  background-color: #a23479; /*#00546e*/
-  border-radius: 0.4em;
-  color: #fdfdfd;
-  font-family: museo-sans,Helvetica,Arial,sans-serif;
-  font-size: 0.8rem;
-  height: 2.125em;
-  margin-bottom: .5em;
-  margin-left: 1em;
-  margin-top: .5em;
-
-}
-
 
 /* iPad fix for showing reset button text */
 @media (min-width: 768px) and (max-width: 839px) {
@@ -268,6 +244,7 @@ body {
     }
 }
 
+/* ========================================================================== */
 
 .c-btn--selectable__label {
   background-color: #0f3d4c;
@@ -327,7 +304,7 @@ body {
 @media (max-width: 767px) {
   .c-btn--selectable__label:first-of-type,
   .c-btn-group .c-btn {
-     border-bottom: 1px solid rgba(255,255,255,.15);  /* colour as seen in devtools */ 
+     border-bottom: 1px solid rgba(255,255,255,.15);  /* colour as seen in devtools */
   }
 
     /* hide anchor on mobile */
@@ -358,26 +335,6 @@ body {
       padding: 0.5rem 0;
       width: 150px;
   }
-  .control-ui {
-    width: 8em;
-  }
-}
-
-
-/* SNAZZY INFO BOX CHANGES */
-.si-content {
-  font-family: museo-sans,Helvetica,Arial,sans-serif;
-}
-.si-content :last-child {
-  margin-bottom:0;
-}
-
-.si-content-more-link,
-.si-content-more-link:visited {
-  color: #e4b53c;
-  cursor: pointer;
-  text-decoration: none;
-  text-decoration: underline;
 }
 
 
@@ -496,14 +453,14 @@ input[type=search] {
     .infoPanel
     {
         display:block;
-        
+
         pointer-events:none;
         opacity:0;
         transform:translateX( -20% );
 
         transition:opacity 50ms ease , transform 50ms ease;
     }
-  
+
     .infoPanel.is-open
     {
         pointer-events:auto;
@@ -661,18 +618,28 @@ input[type=search] {
 
 /* Custom popup styling */
 
-.mapboxgl-popup
-{
-}
-
 .mapboxgl-popup-content
 {
     max-width:285px;
     padding:24px 18px;
-    
+
     background:rgba(15, 61, 76, 0.9);
     border-radius:0.4rem;
     color:white;
+}
+
+.mapboxgl-popup-content a,
+.mapboxgl-popup-content a:visited
+{
+  color: #e4b53c;
+  cursor: pointer;
+  text-decoration: none;
+  text-decoration: underline;
+}
+
+.mapboxgl-popup-content a:hover
+{
+    color: #00b3eb;
 }
 
 .mapboxgl-popup-content > *:last-child
