Adds override for facility toggling > 768px

--- a/src/css/map.css
+++ b/src/css/map.css
@@ -315,6 +315,9 @@ body {
   .bar {
       display: none;
   }
+
+  .panel { display:block !important; } /* Override any toggling done in JS */
+
   .c-form {
       position: relative;
       left: 0;
