Resets popup typeface to inherit from PL

--- a/src/css/map.css
+++ b/src/css/map.css
@@ -619,10 +619,13 @@ input[type=search] {
 /* Mapbox */
 /* ========================================================================== */
 
+.mapboxgl-map {
+    font-family:inherit;
+}
+
 /* Custom map marker styles */
 
-.marker
-{
+.marker {
     background:center center / contain no-repeat;
     cursor:pointer;
 }
@@ -630,7 +633,8 @@ input[type=search] {
 /* Custom popup styling */
 
 .mapboxgl-popup-close-button {
-    font-size:2em;
+    font-size:1.75em;
+    font-weight:bold;
     padding:0.15em 0.2em;
     opacity:0.5;
 }
